Update the recipe template

--- a/recipes/bread.html
+++ b/recipes/bread.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bread</title>
 </head>
 <body>
-    <a>Document</a>
+    <a href="../index.html">Home</a>
+    <h1>Bread</h1>
+    <img src="../img/">Tasty<img/>
+
+    <h2>What you need:</h2>
+    <ul>
+        <li></li>
+    </ul>
+
+    <h2>What you do:</h2>
+    <ol>
+        <li></li>
+    </ol>
+
+    <h2>What is next:</h2>
+
 </body>
 </html>
