--- a/recipes/saturation-suspicious-stew.html
+++ b/recipes/saturation-suspicious-stew.html
@@ -6,6 +6,20 @@
     <title>Saturation Suspicious Stew</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Saturation Suspicious Stew</h1>
+    <img src="../img/">Tasty<img/>
+
+    <h2>What you need:</h2>
+    <ul>
+        <li></li>
+    </ul>
+
+    <h2>What you do:</h2>
+    <ol>
+        <li></li>
+    </ol>
+
+    <h2>What is next:</h2>
 </body>
 </html>
