Update the recipe template

--- a/recipes/golden-carrot.html
+++ b/recipes/golden-carrot.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Golden Carrot</h1>
-    <img src="../img/">Tasty<img/>
+    <img src="../img/" alt="Tasty">
 
     <h2>What you need:</h2>
     <ul>
