Update bread recipe

--- a/recipes/bread.html
+++ b/recipes/bread.html
@@ -12,14 +12,31 @@
 
     <h2>What you need:</h2>
     <ul>
-        <li></li>
+        <li>
+            <p>Crafting table</p>
+            <img src="../img/crafting-table.webp" alt="crafting table" width="90">
+        </li>
+        <li>
+            <p>Wheat</p>
+            <img src="../img/wheat.jpeg" alt="wheat" width="90"> x3
+        </li>
     </ul>
 
     <h2>What you do:</h2>
     <ol>
-        <li></li>
+        <li>
+            <p>First you need to go to your crafting table</p>
+            <img src="../img/crafting-menu.png" alt="open crafting table" width="250">
+        </li>
+        <li>
+            <p>Then you put the three wheat you've got in the middle row consecuently</p>
+            <img src="../img/make-bread.png" alt="open crafting table" width="250">
+        </li>
+        <li>
+            <p>Finally, grab your bread from the table and enjoy!</p>
+        </li>
     </ol>
-
+        
     <h2>What is next:</h2>
 
 </body>
