--- a/recipes/suspicious-stew.html
+++ b/recipes/suspicious-stew.html
@@ -8,16 +8,22 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Suspicious Stew</h1>
-    <img src="../img/" alt="Tasty">
+    <img src="../img/" alt="Tasty" width="">
 
     <h2>What you need:</h2>
     <ul>
-        <li></li>
+        <li>
+            <p></p>
+            <img src="" alt="" width="">
+        </li>
     </ul>
 
     <h2>What you do:</h2>
     <ol>
-        <li></li>
+        <li>
+            <p></p>
+            <img src="" alt="" width="">
+        </li>
     </ol>
 
     <h2>What is next:</h2>
