Update the cookie recipe

--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -8,13 +8,17 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Cookie</h1>
-    <img src="../img/" alt="Tasty" width="">
+    <img src="../img/cookie.webp" alt="Tasty" width="150">
 
     <h2>What you need:</h2>
     <ul>
         <li>
-            <p></p>
-            <img src="" alt="" width="">
+            <p>Wheat</p>
+            <img src="../img/wheat.jpeg" alt="wheat" width="90"> x2
+        </li>
+        <li>
+            <p>Cocoa Beans</p>
+            <img src="../img/cocoa-beans.webp" alt="wheat" width="90"> x1
         </li>
     </ul>
 
@@ -23,6 +27,17 @@
         <li>
             <p></p>
             <img src="" alt="" width="">
+        </li>
+        <li>
+            <p>First you need to go to your crafting table</p>
+            <img src="../img/crafting-menu.png" alt="open crafting table" width="250">
+        </li>
+        <li>
+            <p>Then on the middle row you put two wheat on each side and a cocoa bean in the middle </p>
+            <img src="../img/make-cookie.png" alt="open crafting table" width="250">
+        </li>
+        <li>
+            <p>Finally, grab your 8 cookies from the table and enjoy!</p>
         </li>
     </ol>
 
