--- a/recipes/bread.html
+++ b/recipes/bread.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Bread</h1>
-    <img src="../img/bread.webp" alt="Tasty">
+    <img src="../img/bread.webp" alt="bread">
 
     <h2>What you need:</h2>
     <ul>
