Update cake recipe

--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Cake</h1>
-    <img src="../img/" alt="Tasty" width="">
+    <img src="../img/cake.jpeg" alt="Cake" width="200">
 
     <h2>What you need:</h2>
     <ul>
@@ -16,13 +16,41 @@
             <p></p>
             <img src="" alt="" width="">
         </li>
+        <li>
+            <p>Wheat</p>
+            <img src="../img/wheat.jpeg" alt="wheat" width="90"> x3
+        </li>
+
+        <li>
+            <p>Egg</p>
+            <img src="../img/egg.webp" alt="wheat" width="90"> x1
+        </li>
+
+        <li>
+            <p>Milk Bucket</p>
+            <img src="../img/milk-bucket.webp" alt="wheat" width="90"> x3
+        </li>
+
+        <li>
+            <p>Sugar</p>
+            <img src="../img/sugar.webp" alt="wheat" width="90"> x2
+        </li>
     </ul>
 
     <h2>What you do:</h2>
     <ol>
         <li>
-            <p></p>
-            <img src="" alt="" width="">
+            <p>First you need to go to your crafting table</p>
+            <img src="../img/crafting-menu.png" alt="open crafting table" width="250">
+        </li>
+
+        <li>
+            <p>Then put the <em>three milk buckets</em> in the upper row, the <em>three wheat</em> in the lower row, and an <em>egg</em> in the middle of the middle row completing the remaining slots with the <em>sugar</em></p>
+            <img src="../img/make-cake.png" alt="open crafting table" width="250">
+        </li>
+
+        <li>
+            <p>Finally, grab your cake from the table and enjoy!</p>
         </li>
     </ol>
 
