Update recipe template

--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -13,6 +13,10 @@
     <h2>What you need:</h2>
     <ul>
         <li>
+            <p>Crafting table</p>
+            <img src="../img/crafting-table.webp" alt="crafting table" width="90">
+        </li>
+        <li>
             <p>Wheat</p>
             <img src="../img/wheat.jpeg" alt="wheat" width="90"> x2
         </li>
