--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/bread.html">Bread</a></li>
-        <li><a href="recipes/cake.html">Cake</a></li>
         <li><a href="recipes/cookie.html">Cookie</a></li>
-        <li><a href="recipes/golden-carrot.html">Golden Carrot</a></li>
+        <li><a href="recipes/cake.html">Cake</a></li>
+        <!-- <li><a href="recipes/sugar.html">Golden Carrot</a></li>
+        <li><a href="recipes/milk-bucket.html">Saturation Suspicious Stew</a></li> -->
         <li><a href="recipes/suspicious-stew.html">Suspicious Stew</a></li>
-        <li><a href="recipes/saturation-suspicious-stew.html">Saturation Suspicious Stew</a></li>
     </ul>
 </body>
 </html>
