Update the sugar recipe

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <li><a href="recipes/bread.html">Bread</a></li>
         <li><a href="recipes/cookie.html">Cookie</a></li>
         <li><a href="recipes/cake.html">Cake</a></li>
-        <!-- <li><a href="recipes/sugar.html">Golden Carrot</a></li>
-        <li><a href="recipes/milk-bucket.html">Saturation Suspicious Stew</a></li> -->
+        <!-- <li><a href="recipes/sugar.html">Sugar</a></li> -->
         <li><a href="recipes/suspicious-stew.html">Suspicious Stew</a></li>
     </ul>
 </body>
