--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -32,7 +32,7 @@
         </li>
 
         <li>
-            <p>Sugar</p>
+            <p><a href="sugar.html">Sugar</a></p>
             <img src="../img/sugar.webp" alt="wheat" width="90"> x2
         </li>
     </ul>
