--- a/recipes/sugar.html
+++ b/recipes/sugar.html
@@ -7,22 +7,30 @@
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Golden Carrot</h1>
+    <h1>Sugar</h1>
     <img src="../img/" alt="Tasty" width="">
 
     <h2>What you need:</h2>
     <ul>
         <li>
-            <p></p>
-            <img src="" alt="" width="">
+            <p>Crafting table</p>
+            <img src="../img/crafting-table.webp" alt="crafting table" width="90">
+        </li>
+        <li>
+            <p>Sugar Cane</p>
+            <img src="../img/sugar-cane.jpeg" alt="sugar cane" width="90"> x1
         </li>
     </ul>
 
     <h2>What you do:</h2>
     <ol>
         <li>
-            <p></p>
-            <img src="" alt="" width="">
+            <p>Just put the <em>sugar cane</em> in the crafting menu (it could be a crafting table or the player one)</p>
+            <img src="../img/make-sugar.png" alt="open crafting table" width="250">
+        </li>
+
+        <li>
+            <p>Finally, grab your sugar from the menu and enjoy!</p>
         </li>
     </ol>
 
