--- a/recipes/sugar.html
+++ b/recipes/sugar.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Sugar</h1>
-    <img src="../img/" alt="Tasty" width="">
+    <img src="../img/sugar.webp" alt="Tasty" width="180">
 
     <h2>What you need:</h2>
     <ul>
