Change recipe template

--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -40,7 +40,7 @@
             <p>Finally, grab your 8 cookies from the table and enjoy!</p>
         </li>
     </ol>
-
-    <h2>What is next:</h2>
+    
+    <a href="../index.html">Home</a>
 </body>
 </html>
