--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="recipes/cookie.html">Cookie</a></li>
         <li><a href="recipes/cake.html">Cake</a></li>
         <!-- <li><a href="recipes/sugar.html">Sugar</a></li> -->
-        <li><a href="recipes/suspicious-stew.html">Suspicious Stew</a></li>
+        <!-- <li><a href="recipes/suspicious-stew.html">Suspicious Stew</a></li> -->
     </ul>
 </body>
 </html>
